elasticsearch.in.sh adjusted for G1GC